deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k5smovie-review-deploy
  labels:
    app: k5smovie-review-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k5smovie-review
  template:
    metadata:
      labels:
        app: k5smovie-review
    spec:
      containers:
      - name: review-spring-boot
        image: 262213740647.dkr.ecr.ap-northeast-2.amazonaws.com/k5s_review:v90
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        - containerPort: 8081
        - containerPort: 3306
        resources:
          requests:
            cpu: "150m"
          limits:
            cpu: "300m"
