ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k5smovie-infochat-ingress # 인그레스 이름 정하기
  namespace: default    # 설치할 네임스페이스
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: k5s-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:262213740647:certificate/03d72a3a-2e44-498d-9dfe-75d4ec840b63
spec:
  rules:
  - http:
      paths:
        - path: /movies
          pathType: Prefix
          backend:
            service:
              name: k5smovie-infochat-svc # 연결할 서비스 (이부분은 고정)
              port:
                number: 443  # (이부분도 고정)
